--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2a36e568ae12ace459d4",
+    "/css/app.css": "/css/app.css?id=6fd411e62b233c5aece6"
 }
